# mapc-2018

./: .gitignore  .gitmodules  Readme.md  debug
script/: start_massim.sh  start_massim_big.sh  start_massim_contest.sh  start_massim_med.sh  start_massim_src.sh
src/mac_rhbp_example/: CMakeLists.txt  Readme.md  package.xml  setup.py
src/mac_rhbp_example/doc/: mac_rhbp_example.gliffy
src/mac_rhbp_example/launch/: mapc_manual_start.launch  mapc_start_db.launch  mapc_start_others.launch  rhbp_agent.launch  rhbp_agents_example.launch
src/mac_rhbp_example/msg/: AssistTask.msg  Movement.msg  Task.msg
src/mac_rhbp_example/src/: agent_modules.py  job_planner.py  rhbp_agent.py
src/mac_ros_bridge/: CMakeLists.txt  Readme.md  package.xml
src/mac_ros_bridge/launch/: dummy_agent.launch  mac_ros_bridge.launch  mac_ros_bridge_example.launch
src/mac_ros_bridge/msg/: Agent.msg  AuctionJob.msg  AuctionJobMsg.msg  Bye.msg  ChargingStation.msg  ChargingStationMsg.msg  Dump.msg  DumpLocation.msg  DumpMsg.msg  Entity.msg  EntityMsg.msg  FacilityMsg.msg  GenericAction.msg  Item.msg  Job.msg  JobMsg.msg  Position.msg  PricedJob.msg  Product.msg  RequestAction.msg  Resource.msg  ResourceMsg.msg  Role.msg  Shop.msg  ShopMsg.msg  SimEnd.msg  SimStart.msg  Status.msg  Storage.msg  StorageMsg.msg  (+7 more)
src/mac_utils/: CMakeLists.txt  README.md  package.xml  setup.py
src/mac_utils/launch/: graphhopper.launch
src/mac_utils/src/mac_utils/: graphhopper.py  statistics.py
src/mac_utils/srv/: SetGraphhopperMap.srv
src/mapc_rhbp_ettlinger/: CMakeLists.txt  Readme.md  package.xml  setup.py
(+274 files in other folders)
